--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -13,8 +13,9 @@
 	{% endcol %}
 {% endrow %}
 {% row %}
-    {% col %}
-        {% recent_posts post %}
-    {% endcol %}
+	{% col %}
+		{% recent_posts post %}
+	{% endcol %}
 {% endrow %}
+{% include "blog/post-comments.html" %}
 {% endblock %}
